# Space-Invaders

./: .clang-format  .gitignore  CMakeLists.txt  Design of project.docx  Doxyfile  README.md  run.sh
Doxygen/html/: _controller_8h_source.html  _controller_bullet_8h_source.html  _controller_enemy_8h_source.html  _controller_player_8h_source.html  _defines_8h_source.html  _entity_8h_source.html  _entity_enemy_8h_source.html  _events_8h_source.html  _game_8h_source.html  _hitbox_8h_source.html  _observer_8h_source.html  _s_f_m_lmanager_8h_source.html  _stopwatch_8h_source.html  _subject_8h_source.html  _transformation_8h_source.html  _view_8h_source.html  _world_controller_8h_source.html  annotated.html  class_controller-members.html  class_controller.html  class_controller_bullet-members.html  class_controller_bullet.html  class_controller_enemy-members.html  class_controller_enemy.html  class_controller_player-members.html  class_controller_player.html  class_entity-members.html  class_entity.html  class_entity_enemy-members.html  class_entity_enemy.html  class_game-members.html  class_game.html  class_global_1_1_stopwatch-members.html  class_global_1_1_stopwatch.html  class_global_1_1_transformation-members.html  class_global_1_1_transformation.html  class_hitbox-members.html  class_hitbox.html  class_observer-members.html  class_observer.html  (+26 more)
Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+13 more)
LinuxBin/Assests/: Player.json
LinuxBin/Assests/Levels/: level2.json  level3.json
src/: Defines.h  Events.h  Game.cpp  Game.h  Hitbox.cpp  Hitbox.h  InputHandler.cpp  InputHandler.h  main.cpp
src/Visual/: SFMLmanager.cpp  SFMLmanager.h  Transformation.cpp  Transformation.h
src/entity/: Controller.cpp  Controller.h  Entity.cpp  Entity.h  View.cpp  View.h
src/entity/Bullet/: ControllerBullet.cpp  ControllerBullet.h  (+2 more)
src/patern/: Command.cpp  Command.h  Observer.cpp  Observer.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h
(+24 files in other folders)
